Uploading the latest progress, should be getting the key error

--- a/settings/experiment/settings.json
+++ b/settings/experiment/settings.json
@@ -6,6 +6,7 @@
     "n_init_states": 10,
     "n_steps": 30,
     "n_aux_chans": 8,
-    "binary_channel": false,
-    "fixed_tiles": true
+    "binary_channel": true,
+    "fixed_tiles": true,
+    "overwrite": true
 }
