--- a/settings/experiment/settings.json
+++ b/settings/experiment/settings.json
@@ -1,4 +1,5 @@
 {
+    "experiment_id": 3,
     "game": "zelda",
     "model_name": "NCA",
     "step_size": 0.05,
@@ -10,6 +11,6 @@
     "fixed_tiles": true,
     "overwrite": true,
     "n_models_per_dim": 100,
-    "playability_weight": 1,
+    "playability_weight": 10,
     "reliability_weight": 1
 }
