--- a/settings/experiment/settings.json
+++ b/settings/experiment/settings.json
@@ -1,6 +1,6 @@
 {
-    "experiment_id": 3,
-    "description" : "Test of new bc - number of enemies.",
+    "experiment_id": 4,
+    "description" : "How about default method of evolution, does it work?",
     "game": "zelda",
     "model_name": "NCA",
     "step_size": 0.05,
@@ -12,7 +12,7 @@
     "fixed_tiles": true,
     "fixed_tiles_difficulty": "easy",
     "fixed_tiles_archive_size": 100,
-    "evolve_strategy": "obj_based_on_swft",
+    "evolve_strategy": "default",
     "overwrite": true,
     "playability_weight": 1,
     "reliability_weight": 1
