--- a/settings/experiment/settings.json
+++ b/settings/experiment/settings.json
@@ -1,12 +1,12 @@
 {
-    "experiment_id": 2,
-    "description" : "This is one tests whether we can load manually created fixed tiles.",
+    "experiment_id": 1,
+    "description" : "Manual fixed tiles(100), 5000 generations"
     "game": "zelda",
     "model_name": "NCA",
     "step_size": 0.05,
     "fix_seeds": false,
     "n_init_states": 10,
-    "n_steps": 30,
+    "n_steps": 50,
     "n_aux_chans": 8,
     "binary_channel": true,
     "fixed_tiles": true,
