--- a/settings/experiment/settings.json
+++ b/settings/experiment/settings.json
@@ -1,6 +1,6 @@
 {
-    "experiment_id": 1,
-    "description" : "Manual fixed tiles(100), 5000 generations"
+    "experiment_id": 2,
+    "description" : "Baseline, no fixed tiles 5000 generations",
     "game": "zelda",
     "model_name": "NCA",
     "step_size": 0.05,
@@ -8,12 +8,12 @@
     "n_init_states": 10,
     "n_steps": 50,
     "n_aux_chans": 8,
-    "binary_channel": true,
-    "fixed_tiles": true,
+    "binary_channel": false,
+    "fixed_tiles": false,
     "fixed_tiles_difficulty": "easy",
     "fixed_tiles_archive_size": 100,
     "evolve_strategy": "default",
-    "overwrite": true,
+    "overwrite": false,
     "playability_weight": 1,
     "reliability_weight": 1
 }
