--- a/settings/experiment/settings.json
+++ b/settings/experiment/settings.json
@@ -1,20 +1,20 @@
 {
-    "experiment_id": 2,
-    "description" : "Baseline, no fixed tiles 5000 generations",
+    "experiment_id": 8,
+    "description" : "lukas test",
     "game": "zelda",
     "model_name": "NCA",
     "step_size": 0.05,
     "fix_seeds": false,
     "n_init_states": 10,
-    "n_steps": 50,
+    "n_steps": 30,
     "n_aux_chans": 8,
-    "binary_channel": false,
-    "fixed_tiles": false,
+    "binary_channel": true,
+    "fixed_tiles": true,
     "fixed_tiles_difficulty": "easy",
     "fixed_tiles_archive_size": 100,
-    "evolve_strategy": "default",
+    "evolve_strategy": "obj_based_on_swft",
     "padding_type": 0,
-    "overwrite": false,
+    "overwrite": true,
     "playability_weight": 1,
     "reliability_weight": 1
 }
