Added setting of Sams experiment

--- a/settings/experiment/settings.json
+++ b/settings/experiment/settings.json
@@ -1,18 +1,18 @@
 {
-    "experiment_id": 8,
-    "description" : "Ludek testing whether the diversity works.",
+    "experiment_id": 6,
+    "description" : "Baseline model reproducing Sam's experiment. (including diversity)",
     "game": "zelda",
     "model_name": "NCA",
     "step_size": 0.05,
     "fix_seeds": false,
     "n_init_states": 10,
-    "n_steps": 30,
-    "n_aux_chans": 8,
-    "binary_channel": true,
-    "fixed_tiles": true,
+    "n_steps": 50,
+    "n_aux_chans": 3,
+    "binary_channel": false,
+    "fixed_tiles": false,
     "fixed_tiles_difficulty": "easy",
     "fixed_tiles_archive_size": 100,
-    "evolve_strategy": "obj_based_on_swft",
+    "evolve_strategy": "default",
     "padding_type": 0,
     "overwrite": true,
     "playability_weight": 1,
