Baseline experiment working, checked the validity of Lukas addition, added example of inference

--- a/settings/slurm/settings.json
+++ b/settings/slurm/settings.json
@@ -1,5 +1,5 @@
 {
-    "partition": "brown",
+    "partition": "red,brown",
     "emails": "luci@itu.dk,lukr@itu.dk",
     "username": "lukr",
     "domain": "hpc.itu.dk",
