--- a/settings/experiment/settings.json
+++ b/settings/experiment/settings.json
@@ -1,18 +1,18 @@
 {
-    "experiment_id": 6,
-    "description" : "Baseline model reproducing Sam's experiment. (including diversity)",
+    "experiment_id": 9,
+    "description" : "Adjustment of the baseline: padding 1.",
     "game": "zelda",
     "model_name": "NCA",
     "step_size": 0.05,
     "n_init_states": 10,
     "n_steps": 50,
     "n_aux_chans": 3,
-    "binary_channel": false,
-    "fixed_tiles": false,
-    "fixed_tiles_difficulty": "easy",
+    "binary_channel": true,
+    "fixed_tiles": true,
+    "fixed_tiles_difficulty": "manual",
     "fixed_tiles_archive_size": 100,
     "evolve_strategy": "default",
-    "padding_type": 0,
+    "padding_type": 1,
     "overwrite": true,
     "playability_weight": 1,
     "reliability_weight": 1,
