started working on different ways of handling aux channels

--- a/settings/experiment/settings.json
+++ b/settings/experiment/settings.json
@@ -16,5 +16,6 @@
     "overwrite": true,
     "playability_weight": 1,
     "reliability_weight": 1,
-    "include_diversity": true
+    "include_diversity": true,
+    "aux_chans_opr": "add"
 }
