--- a/settings/slurm/settings.json
+++ b/settings/slurm/settings.json
@@ -1,10 +1,12 @@
 {
     "partition": "red,brown",
     "emails": "luci@itu.dk,lukr@itu.dk",
-    "username": "lukr",
+    "username": "luci",
     "domain": "hpc.itu.dk",
-    "bashrc_path": "/home/lukr/.bashrc",
+    "bashrc_path": "/home/luci/.bashrc",
     "repo_path": "/home/data_shares/interactive_nca/control-pcgnca",
-    "envname": "pcgnca-v4",
-    "install_req": false
+    "envname": "pcgnca-v10",
+    "install_req": false,
+    "exclude_nodes": "cn8",
+    "python_version": "3.10"
 }
