Revert "Update the cma-mae branch"

--- a/settings/experiment/settings.json
+++ b/settings/experiment/settings.json
@@ -1,15 +1,15 @@
 {
-    "experiment_id": 2,
-    "description" : "Test 2",
+    "experiment_id": 11,
+    "description" : "Same as baseline except we are not using diversity.",
     "game": "zelda",
     "model_name": "NCA",
     "step_size": 0.05,
     "n_init_states": 10,
     "n_steps": 50,
     "n_aux_chans": 3,
-    "binary_channel": true,
-    "fixed_tiles": true,
-    "fixed_tiles_difficulty": "easy",
+    "binary_channel": false,
+    "fixed_tiles": false,
+    "fixed_tiles_difficulty": "manual",
     "fixed_tiles_archive_size": 100,
     "evolve_strategy": "default",
     "padding_type": 0,
