--- a/settings/experiment/settings.json
+++ b/settings/experiment/settings.json
@@ -1,6 +1,6 @@
 {
-    "experiment_id": 2,
-    "description" : "Test 2",
+    "experiment_id": 48,
+    "description" : "Same as exp38, but restarts emitters every 100th iteration.",
     "game": "zelda",
     "model_name": "NCA",
     "step_size": 0.05,
@@ -10,9 +10,9 @@
     "binary_channel": true,
     "fixed_tiles": true,
     "fixed_tiles_difficulty": "easy",
-    "fixed_tiles_archive_size": 100,
+    "fixed_tiles_archive_size": 1000,
     "evolve_strategy": "default",
-    "padding_type": 0,
+    "padding_type": 1,
     "overwrite": true,
     "playability_weight": 1,
     "reliability_weight": 1,
